--- a/build.gradle
+++ b/build.gradle
@@ -55,3 +55,9 @@ tasks.withType(Test) {
         }
     }
 }
+
+task tests(type: Test) {
+    useJUnitPlatform{
+        includeTags "tests"
+    }
+}
